--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,28 @@
 #home {
-  background-color: red;
+  margin: 90px;
+  background-image: linear-gradient(180deg, #F1DEDC -60.65%, rgba(232, 214, 214, 0.6) 21.95%, rgba(65, 66, 99, 0.09) 99.54%),
+                    url("/Users/antoinecaby/Documents/VetisioCSS/assets/Images/ChienEtMaitre.jpeg");
+}
+
+#home .topbar{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#home .topbar .topbar-img img{
+  width: 25%;
+  height: auto;
+}
+
+#home .topbar ul{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
+
+#home .topbar ul li a{
+  text-decoration: none;
+  color: #29253B;
+  margin-left: 60px;
 }
