--- a/assets/css/discover.css
+++ b/assets/css/discover.css
@@ -94,6 +94,7 @@ padding: 30px 60px 30px 60px;
 
 #discover .services{
   background: #F9F0EB;
+  padding: 60px 17% 60px 17%;
 }
 
 #discover .services .title-services{
@@ -114,13 +115,59 @@ padding: 30px 60px 30px 60px;
   line-height: 39px;
   text-align: center;
   color: #4E476D;
+  margin-bottom: 50px;
 }
 
 #discover .services .list-services{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin-bottom: 50px;
 }
 
-#discover .services .list-services{
+#discover .services .list-services .separateur{
+  border-right: solid 1px black;
+  padding-right: 15px;
+}
 
+#discover .services .list-services .diffservices ul{
+  list-style: none;
+}
+
+#discover .services .list-services .diffservices-title{
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  color: #4E476D;
+  text-align: center;
+}
+
+#discover .services .list-services .diffservices-text{
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  color: #000000;
+}
+
+#discover .services .button-services a{
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 110%;
+  letter-spacing: 0.01em;
+  color: #29253B;
+  background: linear-gradient(89.84deg, #F1DEDC 11.21%, #CEC4D6 89.37%);
+  border-radius: 50px;
+  padding: 10px 20px 10px 20px;
+}
+
+#discover .services .button-services{
+  display: flex;
+  justify-content: center;
 }
