--- a/assets/css/addKinfolk.css
+++ b/assets/css/addKinfolk.css
@@ -4,7 +4,7 @@
 }
 
 #addKinfolk .topbar{
-    margin-bottom: 50px;
+    margin-bottom: 125px;
 }
 
 #addKinfolk .topbar .topbar-logo img{
@@ -21,7 +21,7 @@
     font-weight: 700;
     font-size: 40px;
     line-height: 72px;
-    text-align: center; 
+    text-align: center;
     color: #4E476D;
 }
 
@@ -32,7 +32,8 @@
     font-size: 24px;
     line-height: 36px;
     text-align: center;
-    color: #4E476D;  
+    color: #4E476D;
+    margin-bottom: 50px;
 }
 
 #addKinfolk .content form .nom-label{
@@ -42,24 +43,31 @@
     font-size: 32px;
     line-height: 48px;
     color: #4E476D;
+    text-align: right;
 }
 
 #addKinfolk .content form .nom-input{
     background: rgba(255, 255, 255, 0.37);
     padding: 10px;
     width: 15%;
+    border: none;
+    margin-left: 40px;
 }
 
 #addKinfolk .content form .prenom-input{
     background: rgba(255, 255, 255, 0.37);
     padding: 10px;
     width: 15%;
+    border: none;
+    margin-left: 40px;
 }
 
 #addKinfolk .content form .mail-input{
     background: rgba(255, 255, 255, 0.37);
     padding: 10px;
     width: 15%;
+    border: none;
+    margin-left: 40px;
 }
 
 #addKinfolk .content form .prenom-label{
@@ -78,4 +86,19 @@
     font-size: 32px;
     line-height: 48px;
     color: #4E476D;
+}
+
+#addKinfolk .content form .submit-input{
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 110%;
+  letter-spacing: 0.01em;
+  color: #29253B;
+  background: linear-gradient(89.84deg, #F1DEDC 11.21%, #CEC4D6 89.37%);
+  border-radius: 50px;
+  border: none;
+  padding: 15px 60px 15px 60px;
+  margin-top: 100px;
 }
