--- a/assets/css/recapWelcome.css
+++ b/assets/css/recapWelcome.css
@@ -44,7 +44,7 @@ width: 15%;
     color: #4E476D;
 }
 
-#recapWelcome .content .infosAnimal{
+#recapWelcome .content .recapAnimal .infosAnimal{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     border: 1px solid #4E476D;
@@ -52,7 +52,7 @@ width: 15%;
     margin-bottom: 100px;
 }
 
-#recapWelcome .content .infosAnimal p{
+#recapWelcome .content .recapAnimal .infosAnimal p{
     font-family: 'Poppins',sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -63,13 +63,13 @@ width: 15%;
     color: #29253B;
 }
 
-#recapWelcome .content .buttons{
+#recapWelcome .content .recapAnimal .buttons{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
 }
 
-#recapWelcome .content .buttons .button-1 a{
+#recapWelcome .content .recapAnimal .buttons .button-1 a{
     font-family: 'Poppins',sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -85,7 +85,7 @@ width: 15%;
 }
 
 
-#recapWelcome .content .buttons .button-2 a{
+#recapWelcome .content .recapAnimal .buttons .button-2 a{
     font-family: 'Poppins',sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -99,4 +99,73 @@ width: 15%;
     border: 3px solid #4E476D;
     border-radius: 10px;
     padding: 30px 50px 30px 50px;
+}
+
+#recapWelcome .content .proches{
+    padding: 0 10% 0 10%;
+    border-right: dotted 1px black;
+}
+
+#recapWelcome .content .proches h3{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    color: #4E476D;
+}
+
+#recapWelcome .content .proches p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #4E476D;
+}
+
+#recapWelcome .content .proches .proches-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 15px;
+}
+
+#recapWelcome .content .proches .proches-list .proches-infos{
+    background: #4E476D;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#recapWelcome .content .proches .proches-list .proches-infos h4{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+    color: #F1DEDC;
+    margin: 0;
+}
+
+#recapWelcome .content .proches .proches-list .proches-infos p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 12px;
+    color: #F1DEDC;
+    padding: 5px;
+}
+
+#recapWelcome .content .proches .proches-list .proches-infos .lien{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 15px;
+    color: #4E476D;
+    background: #F1DEDC;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 20px;
 }
