--- a/assets/css/conseils.css
+++ b/assets/css/conseils.css
@@ -113,7 +113,7 @@
     padding: 50px 15% 50px 15%;
 }
 
-#advice .conseil-badge h3{
+#advice .conseil-badge .title{
     font-family: 'Poppins',sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -144,12 +144,13 @@
     letter-spacing: 0.2px;
     color: #000000;
     padding: 15px 20px 15px 20px;
-    margin: 0 0 15px 0;
+    margin: 0 0 20px 0;
 }
 
 #advice .conseil-badge .badge-list .conseil-badge-left .badge-1{
     display: grid;
     grid-template-columns: 1fr 2fr;
+    margin-bottom: 20px;
 }
 
 #advice .conseil-badge .badge-list .conseil-badge-left .badge-1 .badge-1-img img{
@@ -184,6 +185,7 @@
 #advice .conseil-badge .badge-list .conseil-badge-left .badge-2{
     display: grid;
     grid-template-columns: 1fr 2fr;
+    margin-bottom: 20px;
 }
 
 #advice .conseil-badge .badge-list .conseil-badge-left .badge-2 .badge-2-img img{
@@ -191,7 +193,6 @@
     background: #F9F0EB;
     border-radius: 10px;
     padding: 10px;
-    display: b;
 }
 
 #advice .conseil-badge .badge-list .conseil-badge-left .badge-2 .badge-description h3{
@@ -216,3 +217,225 @@
 }
 
 
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-simple{
+    background: #F9F0EB;
+    border-radius: 10px;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-simple p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.2px;
+    color: #000000;
+    padding: 15px 20px 15px 20px;
+    margin: 0 0 20px 0;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-1{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 20px;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-1 .badge-1-img img{
+    width: 60%;
+    background: #E3E5F1;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-1 .badge-description h3{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 45px;
+    letter-spacing: 0.2px;
+    color: #4E476D;
+    border-bottom: 1px solid #F1DEDC;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-1 .badge-description p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    color: #000000;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-2{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-bottom: 20px;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-2 .badge-2-img img{
+    width: 60%;
+    background: #F9F0EB;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-2 .badge-description h3{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 45px;
+    letter-spacing: 0.2px;
+    color: #4E476D;
+    border-bottom: 1px solid #F1DEDC;
+}
+
+#advice .conseil-badge .badge-list .conseil-badge-right .badge-2 .badge-description p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    color: #000000;
+}
+
+#advice .experts{
+    background: #BACFE8;
+    padding: 50px 15% 50px 15%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 25px;
+}
+
+#advice .experts .expert-card{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: #EEF4FE;
+    border: 1px solid #4E476D;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+#advice .experts .expert-card .expert-card-img img{
+    width: 75%;
+    border-radius: 100%;
+}
+
+#advice .experts .expert-card .expert-card-text h3{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 100%;
+    letter-spacing: 0.2px;
+    color: #4E476D;
+}
+
+#advice .experts .expert-card .expert-card-text .expert-card-text-profession{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 15px;
+    letter-spacing: 0.02em;
+    color: #4E476D;
+}
+
+#advice .experts .expert-card .expert-card-text .expert-card-text-profession2{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0.2px;
+    color: #7780A1;
+    text-align: right;
+}
+
+#advice .experts .expert-card .expert-card-text hr{
+    color: #E2E2ED;
+}
+
+#advice .experts .expert-card .expert-card-text a{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    color: #FFFFFF;
+    text-decoration: none;
+    background: #4E476D;
+    border-radius: 12px;
+    padding: 5px 15px 5px 15px;
+    text-align: right;
+}
+
+#advice .experts .expert-card2{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 10px;
+    padding: 15px;
+    background: #4E476D;
+    border-radius: 10px;
+}
+
+#advice .experts .expert-card2 .expert-card2-img img{
+    width: 100%;
+}
+
+#advice .experts .expert-card2 .expert-card2-text p{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 0.02em;
+    color: #F1DEDC;
+    text-align: center;
+}
+
+
+#advice .footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 50px;
+    padding: 0 7% 0 7%;
+    margin-top: 100px;
+}
+
+#advice .footer .footer-logo img{
+    width: 45%;
+}
+
+#advice .footer .footer-logo p{
+    font-family: 'Inter',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.2px;
+    color: #4E476D;
+}
+
+#advice .footer .footer-sommaire ul{
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+#advice .footer .footer-sommaire ul li{
+    margin-bottom: 15px;
+}
+
+#advice .footer .footer-sommaire ul li a{
+    text-decoration: none;
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #29253B;
+}
